# motion_plan

./: CMakeLists.txt  helloSO3.cpp  helloso3.cpp  plot_speed.py  speed_q.txt  speed_r.txt  test_squad.cpp
src/: Bezier.cpp  Bezier.h  Complex.cpp  Complex.h  Octonion.cpp  Octonion.h  Quaternion.cpp  Quaternion.h  Sedenion.cpp  Sedenion.h  Slerp.cpp  Slerp.h  Spline.cpp  Spline.h  Support.cpp  Support.h  Trigintaduonion.cpp  Trigintaduonion.h  makefile
